# ai-gold-miner

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.learnings/: 2026-06-12-sourcing-truth-verification.md
data/: calendar_2026_q3.json  doctrine_state.json  munger_gold_models.json  mungermodels_scraped.json  personal_rules.md  portfolio.yaml  prediction_journal.jsonl  scenarios.jsonl  trade_log.md
docs/superpowers/specs/: 2026-06-06-event-sourcing-verification-design.md
skills/: .skills_store_lock.json
skills/gold-price-checker/: _meta.json
src/gold_miner/: __init__.py  cli.py  config.py
src/gold_miner/advisor/: __init__.py  action_guide.py  cli.py  consultant.py  core.py  early_warning.py  extreme_guard.py  orchestrator.py  sentiment_guard.py
src/gold_miner/agent/: __init__.py  backtest.py  briefer.py  cli.py  notify.py  portfolio.py  proactive.py
src/gold_miner/backtest/: __init__.py  engine.py
src/gold_miner/data/: __init__.py  accumulation_gold.py  base.py  calendar.py  etf_flow.py  (+12 more)
tests/: test_advisor.py  test_agents.py  test_alert.py  test_analyzer.py  test_analyzer_article.py  test_backtest.py  test_calendar.py  test_doctrine.py  test_etf_flow.py  test_event_store.py  test_findings.py  test_forecaster.py  test_fundamental_signals.py  test_jd_accumulation_gold.py  test_journal_article.py  test_new_modules.py  test_polymarket.py  test_position_risk_manager.py  test_reader.py  test_risk.py  test_scenarios.py  test_scoring_engine.py  test_signals_base.py  test_smart_money.py  test_technical.py  test_tracker.py  test_trailing_stop.py
(+68 files in other folders)
