[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gold-miner"
version = "0.1.0"
description = "黄金投资决策辅助系统 - 现货黄金+积存金双标的智能分析"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "yfinance>=0.2",
    "akshare>=1.14",
    "pandas>=2.0",
    "numpy>=1.26",
    "ta-lib>=0.4",
    "python-dotenv>=1.0",
    "schedule>=1.2",
    "loguru>=0.7",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
gold-miner = "gold_miner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gold_miner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
